# scmaintools

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: make.bat
docs/source/: conf.py  index.rst
