[tool.poetry]
name = "scmaintools"
version = "0.1.0"
description = "Tools for maintaining and releasing SickChill"
authors = ["miigotu <miigotu@gmail.com>"]
license = "GPL3-or-later"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.dev-dependencies]
pydantic-cli = "^4.3.0"
pydantic = "^1.9.1"
Sphinx = "^5.1.1"
sphinx-hoverxref = "^1.1.3"
sphinx-charts = "^0.2.1"
sphinx-pyreverse = "^0.0.17"
sphinx-tagtoctree = "^0.9.3"
sphinx-issues = "^3.0.1"
sphinx-rfcsection = "^0.1.1"
pydantic-webargs = "^1.1.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
