[tool.poetry]
name = "scmaintools"
version = "0.2.2"
description = "Tools for maintaining and releasing SickChill"
authors = ["miigotu <miigotu@gmail.com>"]
license = "GPL3-or-later"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
poethepoet = "^0.16.0"
poetry = ">=1.2.0"

[tool.poetry.dev-dependencies]
pydantic-cli = "^4.3.0"
pydantic = "^1.9.1"
sphinx-hoverxref = "^1.1.3"
sphinx-charts = "^0.2.1"
sphinx-pyreverse = "^0.0.17"
sphinx-tagtoctree = "^0.9.3"
sphinx-issues = "^3.0.1"
sphinx-rfcsection = "^0.1.1"
pydantic-webargs = "^1.1.0"
sphinx-rtd-theme = "^1.0.0"
Sphinx = "^5.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = "pip install poetry && poetry publish --build"
#check_build_status = true
changelog_components = "semantic_release.changelog.changelog_headers,semantic_release.changelog.changelog_table,semantic_release.changelog.compare_url"
changelog_file = "CHANGELOG.md"
branch = "main"
tag_format = "{version}"
upload_to_release = true
